--- a/bootstrappractice.css
+++ b/bootstrappractice.css
@@ -2,6 +2,17 @@ body {
     background-color: yellow;
 }
 
+.closebtn {
+    font-size: 2rem;
+    position: absolute;
+    right: 3%;
+    top: 50px;
+    text-decoration: none;
+}
+.closebtn:hover , .closebtn:active {
+    border-bottom: 2px solid black;
+}
+
 .about-heading1 {
     font-size: 2.7rem;
     position: absolute;
@@ -31,7 +42,7 @@ body {
     position: relative;
     left: 15vw;
     top: 3vh;
-    color:blue;
+    color:black;
     font-size: 2rem;
     text-align: center;
 }
